# ockr-ocr-container

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  helper.py  inference.py  postprocess.py  preprocess.py  pyproject.toml  zookeeper.py
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: publish.yaml  release.yaml
test/resources/: ockr-specification-abstract-base64.txt
